# therapistAI

./: README.MD  automation.py  main.py
ai/: __init__.py
backend/: .env.exmaple  README.MD  compose.env  docker-compose.yaml  pyproject.toml  test.sqlite
backend/tests/: auth_test.py  conftest.py  user_test.py
backend/therapistai/: auth.py  automation.py  main.py  t.py  t_test.py  test_sample.py
backend/therapistai/ai/: __init__.py
backend/therapistai/db/: __init__.py
backend/therapistai/db/models/: __init__.py  appointment.py  message.py  user.py
backend/therapistai/routers/: appointment.py  message.py  token.py  user.py
db/: __init__.py
db/models/: __init__.py  appointment.py  message.py
frontend/: .env  README.md  package-lock.json  package.json
frontend/src/: App.tsx  AppointmentForm.tsx  AppointmentList.tsx  Dashboard.tsx  Home.tsx  Sidebar.tsx  SignUp.tsx  UseFetch.ts  User.tsx  index.css  index.tsx  styles.css  types.ts
routers/: appointment.py  message.py
therapistAI/: bruno.json
therapistAI/Auth/: get token.bru
therapistAI/User/: create.bru  delete.bru  get all.bru  me.bru  update.bru
therapistAI/appointment/: change appointment.bru  create.bru  delete appointment.bru  get all appointments.bru  get latest appointment.bru
therapistAI/message/: create.bru  folder.bru  messages.bru  replay.bru
