[project]
name = "therapistai"
version = "0.1.0"
description = ""
authors = [{ name = "wms198", email = "wang.minshi@icloud.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "lmstudio (>=1.3.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pwdlib[argon2]>=0.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipython>=9.2.0,<10",
    "ruff>=0.14.5",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "Depends",
    "fastapi.Depends",
    "fastapi.params.Depends"
]
